--- a/.gitignore
+++ b/.gitignore
@@ -156,4 +156,7 @@ fabric.properties
 # Sonarlint plugin
 .idea/sonarlint
 
+### Vagrant ###
+.vagrant/
+
 # End of https://www.gitignore.io/api/node,webstorm,sublimetext
